<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaInicial">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="283dp"
        android:layout_height="324dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintVertical_bias="0.108">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="34dp"
            android:layout_height="312dp"
            android:layout_marginEnd="14dp"
            android:text="@string/back"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/imagem"
            tools:srcCompat="@drawable/batman" />

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="34dp"
            android:layout_height="312dp"
            android:onClick="changeImageClicked"
            android:text="@string/on"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>